# graduation-design

./: .gitignore  README.md  test_system.py
Agent/: .env.example  .gitignore  CLAUDE.md  DEEPSEEK_SETUP.md  Dockerfile  FIX_LOG.md  NAS 对接技术方案.md  README.md  README_AUTH.md  REVIEW.md  ROUTER_ARCHITECTURE.md  SPEC.md  account_admin_service.py  agent_generate_service.py  analyze_formats.py  app.py  app_config.py  app_context.py  app_dependencies.py  auth.py  auth_route_service.py  beta_ops_service.py  build_knowledge_base.py  builder.py  cache.py  chat_answer_quality.py  chat_architecture.py  chat_container.py  chat_draft.py  chat_events.py  chat_format.py  chat_lightweight.py  chat_pipelines.py  chat_rag.py  chat_runtime.py  check_sizes.py  config.py  crewai_example.py  dashscope_example.py  database.py  (+89 more)
Agent/agents/: __init__.py  base_agent.py  context_agent.py  document_graph_runner.py  document_graph_state.py  document_graph_steps.py  document_linear_runner.py  document_run_history.py  document_stream_runner.py  knowledge_agent.py  orchestrator.py  planner_agent.py  reflection_agent.py  reviewer_agent.py  search_agent.py  writer_agent.py
Agent/docs/: codex-like-chat-no-inspector.html  codex-minimal-chat.html  codex-reference-chat-states.html  codex-single-state-chat.html  codex-single-thinking-chat.html  conversation-ui-mockups.html  current_architecture.md  internal_beta_runbook.md  kb_optimization.md  multi_agent_efficiency_plan.md  nas_storage_setup.md
Agent/knowledge_base/: __init__.py  (+2 more)
uv-agent/: .env.example  cli.py  config.py  example.py  pyproject.toml
(+22 files in other folders)
