[project]
name = "uv-agent"
version = "0.1.0"
description = "基于阿里云百炼的 Agent 开发环境"
authors = [{name = "Developer"}]
requires-python = ">=3.11"
dependencies = [
    "langchain==1.3.4",
    "langchain-openai==1.2.2",
    "anthropic==0.105.2",
    "openai>=2.26.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "crewai==1.14.6",
]

[project.scripts]
agent-cli = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
